Set my swagger.yaml instead of default. Add 'cities' controller
